# Codex-Manager

./: CHANGELOG.md  Cargo.toml  README.en.md  README.md
.github/workflows/: release-all.yml
apps/: package.json
apps/src/: api.js  main.js
apps/src-tauri/: Cargo.toml  tauri.conf.json
apps/src-tauri/src/commands/: aggregate_api.rs  mod.rs  registry.rs  requestlog.rs  startup.rs
apps/src-tauri/src/commands/account/: remote.rs
apps/src-tauri/src/commands/settings/: gateway.rs
apps/src-tauri/src/rpc_client/: transport.rs
apps/src/api/: service-client.js
apps/src/hooks/: useAccounts.ts  useRuntimeCapabilities.ts
apps/src/runtime/: accounts-page-coordinator.js
apps/src/services/: data.js  service-lifecycle.js
apps/src/types/: index.ts
apps/src/views/: requestlogs.js
crates/core/migrations/: 027_request_logs_trace_context.sql  (+2 more)
crates/service/: Cargo.toml
crates/service/src/: lib.rs  (+1 more)
docs/: README.md
docs/en/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md
docs/ko/: README.md  기여-가이드.md  보안.md  테스트.md
docs/report/: 20260316_codex请求链路差异清单.md  20260324120000000_当前仓库与Codex最新请求差异对照表.md  20260324121000000_逐请求头完整对照表.md  20260324130000000_请求对齐优化TODO.md  20260324140000000_请求对齐优化最终汇总.md  20260326120000000_后台任务账号跳过说明.md  协议兼容回归清单.md  插件中心对接与接口清单.md  系统内部接口总表.md  脚本与发布职责对照.md  长期维护结构优化建议.md
docs/ru/: README.md  Архитектура.md  Безопасность.md  Руководство-для-участников.md  Тестирование.md
docs/todo/: 20260316_codex请求链路对齐TODO.md
scripts/tests/: assert-release-version.test.ps1  web_runtime_probe.test.ps1  web_ui_mock_server.mjs
(+166 files in other folders)
